# simple-github

./: .pre-commit-config.yaml  .taskcluster.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pypi-publish.yml
docs/: conf.py  index.rst
src/simple_github/: __init__.py  auth.py  client.py
src/simple_github/util/: rate_limit.py  types.py
taskcluster/: config.yml  requirements.txt
taskcluster/ci/: config.yml
taskcluster/ci/codecov/: kind.yml
taskcluster/docker/fetch/: Dockerfile
taskcluster/docker/python/: Dockerfile
taskcluster/kinds/codecov/: kind.yml
taskcluster/kinds/docker-image/: kind.yml
taskcluster/scripts/: codecov-upload.py  pyenv-setup
test/: conftest.py  test_auth.py  test_client.py  test_simple-github-client.py  test_simple_github.py
